@@ -5,7 +5,8 @@ Release History
 1.0.0a3 (unreleased)
 --------------------
 
-- Nothing changed yet.
+- Improve error reporting for missing contexts.
+- Exit with code 3 if no metrics have been generated.
 
 
 1.0.0a2 (2012-10-26)
